changed color scheme

--- a/scss/style.css
+++ b/scss/style.css
@@ -149,7 +149,7 @@ h1, h2, h3, h4, h5,
 }
 
 .form-control:active, .form-control:focus {
-  border-color: #007bff;
+  border-color: #4a80bb;
 }
 
 .form-control:hover, .form-control:active, .form-control:focus {
@@ -373,7 +373,7 @@ h1, h2, h3, h4, h5,
 }
 
 .ul-check.primary li:before {
-  color: #007bff;
+  color: #4a80bb;
 }
 
 .select-wrap, .wrap-icon {
@@ -428,7 +428,7 @@ h1, h2, h3, h4, h5,
 }
 
 .site-navbar .site-navigation .site-menu .active {
-  color: #007bff;
+  color: #4a80bb;
   display: inline-block;
   padding: 5px 20px;
 }
@@ -479,7 +479,7 @@ h1, h2, h3, h4, h5,
   top: 100%;
   position: absolute;
   text-align: left;
-  border-top: 2px solid #007bff;
+  border-top: 2px solid #4a80bb;
   -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
           box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
   border-left: 1px solid #edf0f5;
@@ -524,7 +524,7 @@ h1, h2, h3, h4, h5,
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-  color: #007bff !important;
+  color: #4a80bb !important;
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
@@ -560,7 +560,7 @@ h1, h2, h3, h4, h5,
 }
 
 .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-  color: #007bff;
+  color: #4a80bb;
 }
 
 .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
@@ -670,7 +670,7 @@ h1, h2, h3, h4, h5,
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-  color: #007bff;
+  color: #4a80bb;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -679,7 +679,7 @@ h1, h2, h3, h4, h5,
 }
 
 .site-mobile-menu .site-nav-wrap li .active {
-  color: #007bff;
+  color: #4a80bb;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -829,11 +829,11 @@ h1, h2, h3, h4, h5,
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover {
-  color: #007bff;
+  color: #4a80bb;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active:after {
-  background: #007bff;
+  background: #4a80bb;
 }
 
 .sticky-wrapper .shrink {
@@ -856,7 +856,7 @@ h1, h2, h3, h4, h5,
   position: absolute;
   height: 100%;
   width: 70%;
-  background: #007bff;
+  background: #4a80bb;
   border-bottom-right-radius: 0px;
 }
 
@@ -910,12 +910,12 @@ h1, h2, h3, h4, h5,
 }
 
 .cta a span {
-  border-color: #007bff;
+  border-color: #4a80bb;
   padding: 10px 20px;
 }
 
 .cta a:hover span {
-  background: #007bff;
+  background: #4a80bb;
   color: #fff;
 }
 
@@ -924,12 +924,12 @@ h1, h2, h3, h4, h5,
 }
 
 .cta a.active > span {
-  background-color: #007bff;
+  background-color: #4a80bb;
   color: #fff;
 }
 
 .section-sub-title {
-  color: #007bff;
+  color: #4a80bb;
   text-transform: uppercase;
   font-size: .7rem;
   font-weight: 900;
@@ -981,7 +981,7 @@ h1, h2, h3, h4, h5,
 
 .image-absolute-box .box {
   position: absolute;
-  background: #007bff;
+  background: #4a80bb;
   padding: 30px;
   max-width: 300px;
   top: -20%;
@@ -1034,7 +1034,7 @@ h1, h2, h3, h4, h5,
   right: 0;
   bottom: 0;
   content: "";
-  background: rgba(0, 123, 255, 0.8);
+  background: rgba(74, 128, 187, 0.8);
   z-index: 1;
   opacity: 0;
   visibility: hidden;
@@ -1110,7 +1110,7 @@ h1, h2, h3, h4, h5,
 }
 
 .nonloop-block-13 .owl-dots .owl-dot.active span {
-  background-color: #007bff;
+  background-color: #4a80bb;
 }
 
 .nonloop-block-14 .owl-nav {
@@ -1137,7 +1137,7 @@ h1, h2, h3, h4, h5,
 }
 
 .nonloop-block-14 .owl-dots .owl-dot.active span {
-  background-color: #007bff;
+  background-color: #4a80bb;
 }
 
 .footer-section {
@@ -1204,7 +1204,7 @@ h1, h2, h3, h4, h5,
 }
 
 #myBtn:hover {
-  background-color: #007bff;
+  background-color: #4a80bb;
   color: white;
 }
 /*# sourceMappingURL=style.css.map */
