--- a/css/social.css
+++ b/css/social.css
@@ -23,7 +23,7 @@
     font-size: 3.4em;
     text-align: center;
     line-height: 120px;
-    background-color: #007bff;
+    background-color: #4a80bb;
     transition: all 0.5s ease;
   }
   #services li a {
