--- a/scss/bootstrap/bootstrap-reboot.css
+++ b/scss/bootstrap/bootstrap-reboot.css
@@ -133,14 +133,14 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #4a80bb;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #325a86;
   text-decoration: underline;
 }
 
